tests/rosetta/transpiler/C/bitmap-read-an-image-through-a-pipe.error
compile failed: exit status 1: /tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c: In function ‘_mem’:
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c:77:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   77 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c: In function ‘splitWs’:
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c:143:109: warning: missing terminating " character
  143 |         if ((((strcmp(ch, " ") == 0) || (strcmp(ch, "\n") == 0)) || (strcmp(ch, "\t") == 0)) || (strcmp(ch, "
      |                                                                                                             ^
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c:143:109: error: missing terminating " character
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c:144:1: warning: missing terminating " character
  144 | ") == 0)) {
      | ^
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c:144:1: error: missing terminating " character
  144 | ") == 0)) {
      | ^~~~~~~~~~~
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c:145:13: error: expected expression before ‘if’
  145 |             if (strlen(cur) > 0LL) {
      |             ^~
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c:148:14: error: expected ‘)’ before ‘}’ token
  148 |             }
      |              ^
      |              )
  149 |         } else {
      |         ~     
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c:143:97: note: to match this ‘(’
  143 |         if ((((strcmp(ch, " ") == 0) || (strcmp(ch, "\n") == 0)) || (strcmp(ch, "\t") == 0)) || (strcmp(ch, "
      |                                                                                                 ^
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c:148:14: error: expected ‘)’ before ‘}’ token
  148 |             }
      |              ^
      |              )
  149 |         } else {
      |         ~     
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c:143:12: note: to match this ‘(’
  143 |         if ((((strcmp(ch, " ") == 0) || (strcmp(ch, "\n") == 0)) || (strcmp(ch, "\t") == 0)) || (strcmp(ch, "
      |            ^
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c:149:9: error: expected expression before ‘}’ token
  149 |         } else {
      |         ^
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c:149:11: error: ‘else’ without a previous ‘if’
  149 |         } else {
      |           ^~~~
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c:150:35: error: ‘ch’ undeclared (first use in this function)
  150 |             cur = str_concat(cur, ch);
      |                                   ^~
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c:150:35: note: each undeclared identifier is reported only once for each function it appears in
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c: At top level:
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c:154:5: error: expected identifier or ‘(’ before ‘if’
  154 |     if (strlen(cur) > 0LL) {
      |     ^~
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c:157:5: error: expected identifier or ‘(’ before ‘return’
  157 |     return splitWs_len = parts_len, parts;
      |     ^~~~~~
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c:158:1: error: expected identifier or ‘(’ before ‘}’ token
  158 | }
      | ^
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c: In function ‘parsePpm’:
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c:177:12: error: incompatible types when returning type ‘Anon2’ but ‘Anon1’ was expected
  177 |     return (Anon2){.magic = magic, .w = w, .h = h, .max = maxv, .px = px, .px_len = px_len};
      |            ^
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c: In function ‘main’:
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c:185:68: error: ‘Anon1’ has no member named ‘w’
  185 |         puts(str_concat(str_concat(str_concat("width=", str_int(img.w)), " height="), str_int(img.h)));
      |                                                                    ^
/tmp/ctranspile3120042830/bitmap-read-an-image-through-a-pipe.mochi.c:185:98: error: ‘Anon1’ has no member named ‘h’
  185 |         puts(str_concat(str_concat(str_concat("width=", str_int(img.w)), " height="), str_int(img.h)));
      |                                                                                                  ^

