tests/rosetta/transpiler/C/bitmap-read-an-image-through-a-pipe.c
// Generated by Mochi 0.10.32 on 2025-07-31 12:13 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <malloc.h>

size_t splitWs_len;

static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(int v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%d", v);
    return strdup(buf);
}

typedef struct { const char **keys; const char **vals; size_t len; } MapSS;

static int map_get_si(const char *keys[], const int vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return 0;
}

static const char* map_get_ss(const char *keys[], const char *vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return "";
}

static int* list_append_int(int *arr, size_t *len, int val) {
    arr = realloc(arr, (*len + 1) * sizeof(int));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static const char** list_append_str(const char **arr, size_t *len, const char *val) {
    arr = realloc((void*)arr, (*len + 1) * sizeof(char*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    struct mallinfo mi = mallinfo();
    return (long long)mi.uordblks;
}

static const char* _substring(const char *s, int start, int end) {
    int len = (int)strlen(s);
    if (start < 0) start = 0;
    if (end > len) end = len;
    if (start > end) start = end;
    char *res = malloc(end - start + 1);
    memcpy(res, s + start, end - start);
    res[end - start] = 0;
    return res;
}

typedef struct Anon1 Anon1;
typedef struct Anon2 Anon2;

struct Anon1 {
    int err;
};

struct Anon2 {
    const char* magic;
    int w;
    int h;
    int max;
    int *px;
    size_t px_len;
};

const char* ppmData = "P3\n2 2\n1\n0 1 1 0 1 0 0 1 1 1 0 0\n";

int parseIntStr(const char* str);
const char* * splitWs(const char* s);
Anon1 parsePpm(const char* data);
int main(void);

int parseIntStr(const char* str) {
    int i = 0LL;
    int neg = 0LL;
    if ((strlen(str) > 0LL) && (strcmp(_substring(str, 0LL, 1LL), "-") == 0)) {
        neg = 1LL;
        i = 1LL;
    }
    int n = 0LL;
    const char* digits_keys[26] = {"0", "1", "2", "3", "4", "5", "6", "7", "8", "9"};
    int digits_vals[26] = {0LL, 1LL, 2LL, 3LL, 4LL, 5LL, 6LL, 7LL, 8LL, 9LL};
    size_t digits_len = 10;
    while (i < strlen(str)) {
        n = (n * 10LL) + map_get_si(digits_keys, digits_vals, digits_len, _substring(str, i, i + 1LL));
        i = i + 1LL;
    }
    if (neg) {
        n = -(n);
    }
    return n;
}

const char* * splitWs(const char* s) {
    const char* *parts = NULL;
    size_t parts_len = 0;
    const char* cur = "";
    int i = 0LL;
    while (i < strlen(s)) {
        const char* ch = _substring(s, i, i + 1LL);
        if ((((strcmp(ch, " ") == 0) || (strcmp(ch, "\n") == 0)) || (strcmp(ch, "\t") == 0)) || (strcmp(ch, "") == 0)) {
            if (strlen(cur) > 0LL) {
                parts = list_append_str(parts, &parts_len, cur);
                cur = "";
            }
        } else {
            cur = str_concat(cur, ch);
        }
        i = i + 1LL;
    }
    if (strlen(cur) > 0LL) {
        parts = list_append_str(parts, &parts_len, cur);
    }
    return splitWs_len = parts_len, parts;
}

Anon1 parsePpm(const char* data) {
    const char* *toks = splitWs(data);
    size_t toks_len = splitWs_len;
    if (toks_len < 4LL) {
        return (Anon1){.err = 1LL};
    }
    const char* magic = toks[(int)(0LL)];
    int w = parseIntStr(toks[(int)(1LL)]);
    int h = parseIntStr(toks[(int)(2LL)]);
    int maxv = parseIntStr(toks[(int)(3LL)]);
    int *px = NULL;
    size_t px_len = 0;
    int i = 4LL;
    while (i < toks_len) {
        px = list_append_int(px, &px_len, parseIntStr(toks[(int)(i)]));
        i = i + 1LL;
    }
    return (Anon2){.magic = magic, .w = w, .h = h, .max = maxv, .px = px, .px_len = px_len};
}

int main(void) {
    {
        long long __start = _now();
        long long __mem_start = _mem();
        Anon1 img = parsePpm(ppmData);
        puts(str_concat(str_concat(str_concat("width=", str_int(img.w)), " height="), str_int(img.h)));
        long long __end = _now();
        long long __mem_end = _mem();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = __mem_end - __mem_start;
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
